--- a/report/6.854-final_report.arsen.hayk.tex
+++ b/report/6.854-final_report.arsen.hayk.tex
@@ -15,8 +15,11 @@ The abstract text goes here.
 
 \section{Introduction}
 Here is the text of your introduction.
+We are using \cite{bokal_et_al:LIPIcs:2015:5113} and \cite{chan_et_al:LIPIcs:2016:5920}
 
 \section{Conclusion}
 This was a great project!
 
+\bibliographystyle{apalike}
+\bibliography{papers}
 \end{document}
