--- a/report/6.854-final_report.arsen.hayk.tex
+++ b/report/6.854-final_report.arsen.hayk.tex
@@ -17,6 +17,26 @@ The abstract text goes here.
 Here is the text of your introduction.
 We are using \cite{bokal_et_al:LIPIcs:2015:5113} and \cite{chan_et_al:LIPIcs:2016:5920}
 
+\section{Our contribution}
+We've implemented
+\begin{itemize}
+\item In $O(n)$ time  we  can  find  all  maximal  subsequences  that  define  monotone  paths  in  some (subpath-dependent) direction. \cite{bokal_et_al:LIPIcs:2015:5113} 
+\item In $O(n \log^2 n)$ time time we can find all maximal subsequences with diameter at most 1. \cite{chan_et_al:LIPIcs:2016:5920}
+\end{itemize}
+
+\section{Algorithms}
+\subsection{Bokan et al Overview}
+Upper triangle method
+
+\subsection{Chan, Prat Overview}
+Range tree method.
+
+\section{Implementation Details}
+Talk about sweep line, etc.
+
+\section{Experimental Results}
+Talk about sweep line, etc.
+
 \section{Conclusion}
 This was a great project!
 
