add plots to pdf

--- a/report/6.854-final_report.arsen.hayk.tex
+++ b/report/6.854-final_report.arsen.hayk.tex
@@ -43,6 +43,19 @@ Talk about sweep line, etc.
 
 \section{Experimental Results}
 Talk about sweep line, etc.
+\begin{figure}[!h]
+  \centering
+  \includegraphics[height=8cm]{plots/diameter_random_walk}
+  \caption{Caption...}
+  \label{fig:diameter_demo}
+\end{figure}
+
+\begin{figure}[!h]
+  \centering
+  \includegraphics[height=8cm]{plots/monotonicity_moving_gaussian}
+  \caption{Caption...}
+  \label{fig:monotonicity_demo}
+\end{figure}
 
 \section{Conclusion}
 This was a great project!
