started abstract/intro

--- a/report/6.854-final_report.arsen.hayk.tex
+++ b/report/6.854-final_report.arsen.hayk.tex
@@ -10,10 +10,13 @@
 \maketitle
 
 \begin{abstract}
-The abstract text goes here.
+    In this paper we review and implement two algorithms presented by Bokal et al.\cite{bokal_et_al:LIPIcs:2015:5113}, and Chan and Pratt \cite{chan_et_al:LIPIcs:2016:5920}, presented in SoCG'15 and SoCG'16 respectively. Both works introduce novel approaches to finding maximal subsequences with given hereditary properties.
 \end{abstract}
 
 \section{Introduction}
+
+With increasing number of sensors and location-tracking devices, there are massive datasets describing movements of people, animals, robots, etc. Most of the location data points are associated with a timestamp as they describe a movement of an entity.
+
 Here is the text of your introduction.
 We are using \cite{bokal_et_al:LIPIcs:2015:5113} and \cite{chan_et_al:LIPIcs:2016:5920}
 
@@ -44,6 +47,6 @@ Talk about sweep line, etc.
 \section{Conclusion}
 This was a great project!
 
-\bibliographystyle{apalike}
+\bibliographystyle{unsrt}
 \bibliography{papers}
 \end{document}
