--- a/report/papers.bib
+++ b/report/papers.bib
@@ -1,4 +1,4 @@
-@InProceedings{bokal_et_al:LIPIcs:2015:5113,
+@InProceedings{bokal2015,
   author =	{Drago Bokal and Sergio Cabello and David Eppstein},
   title =	{{Finding All Maximal Subsequences with Hereditary Properties}},
   booktitle =	{31st International Symposium on Computational Geometry (SoCG 2015)},
@@ -17,7 +17,7 @@
   annote =	{Keywords: convex hull, diameter, monotone path, sequence of points, trajectory}
 }
 
-@InProceedings{chan_et_al:LIPIcs:2016:5920,
+@InProceedings{chan2016,
   author =	{Timothy M. Chan and Simon Pratt},
   title =	{{Two Approaches to Building Time-Windowed Geometric Data Structures}},
   booktitle =	{32nd International Symposium on Computational Geometry (SoCG 2016)},
