--- a/report/6.854-final_report.arsen.hayk.tex
+++ b/report/6.854-final_report.arsen.hayk.tex
@@ -71,7 +71,7 @@ However, doing a binary search for monotonicity is redundant, since we will do t
 \subsection{Closeness}
 The simple method of closeness-check takes $O(n^2)$ for a sequence of $n$ points, because one has to check all pairs of points. This results in $SN$ runtime of $O(n^3\log n)$, which is super-slow. We can improve the closeness-check to $O(n\log n)$ using furthest-point Voronoi diagrams, but that would not qualify for $SN$ and would also take $O(n^2 \log^2 n)$ time to compute, which is also not fast.
 
-Define $k*(i)$ as the largest index such that $d(s_i, s_j) \leq 1$ for all $j \leq k*(i)$. Clearly, $k^*(i) \geq j^*(i)$. Also, notice that $k^*$ can be computed in $O(n^2)$ for all points.
+Define $k^*(i)$ as the largest index such that $d(s_i, s_j) \leq 1$ for all $j \leq k*(i)$. Clearly, $k^*(i) \geq j^*(i)$. Also, notice that $k^*$ can be computed in $O(n^2)$ for all points.
 
 \textbf{Claim TODO - formatting} For $i < n$ $j^*(i) = \min( j^*(i + 1), k^*(i) )$
 
@@ -84,16 +84,18 @@ This claim gives us an $O(n^2)$ $SN$ construction of $j^*(i)$ for the closeness 
 Bokal et al. introduced an elegant framework to deal with range queries for hereditary problems. The key idea in their work is to greedily split the given set of points into ranges, defined by anchor points, and solve for each using a divide and conquer. To simplify the reasoning we first define a property matrix $A_P$ such that
 \[ A_P(i, j) = \twopartdef{1}{P(S[i, j]) = true}{0}{P(S[i, j]) = false} \]
 
-Suppose that there is an algorithm $J_P$ that, for a given $i$, finds $j^*(i)$ (notice that even if such $J_P$ exists, we are not happy to run it $n$ times for each $i$). We use $J_P$ to find \textit{anchor} points in $S$ as follows. Let $a_k$ be the index of $k^{th}$ anchor point in $S$. We define $a_1 = s_1$, $a_k = j^*(a_{k-1})$ for $k > 1$. Thus, the anchor points can be found using $J_P$. Figure \ref{fig:property_matrix} TODO shows the anchor points on $A$.
+Suppose that there is an algorithm $J_P$ that, for a given $i$, finds $j^*(i)$ (notice that even if such $J_P$ exists, we are not happy to run it $n$ times for each $i$). We use $J_P$ to find \textit{anchor} points in $S$ as follows. Let $a_k$ be the index of $k^{th}$ anchor point in $S$. We define $a_1 = s_1$, $a_k = j^*(a_{k-1})$ for $k > 1$. Thus, the anchor points can be found using $J_P$. Figure \ref{fig:property_matrix} shows the anchor points on $A$ (leftmost image).
 
 \begin{figure}
     \centering
     \includegraphics[width=1.2\textwidth]{figures/property_matrix.pdf}
     \label{fig:property_matrix}
-    \caption{property matrix}
+    \caption{The property matrix $A_P$. The left image illustrates the anchor points. The middle one shows the greedily constructed rectangles from the anchor points. On the right side is the detailed view of the property matrix.}
 \end{figure}
 
-As shown in Figure \ref{fig:property_matrix} the anchor points form rectangles. If we find the frontier (the curve in $A$ separating 1's from 0's) for each rectangle, then we are done. 
+As shown in Figure \ref{fig:property_matrix} the anchor points form rectangles. If we find the frontier (the curve in $A$ separating 1's from 0's) for each rectangle, then we will be done. This is where divide and conquer strategy is used. Consider a rectangle $R$ with rows $[a, a + h]$. We can set $m = a + [h / 2]$ and using $J_P$ find $j^*(m)$.
+
+We know that if $m \leq i \leq a + h$ then $j^*(i) \geq j^*(m)$, and if $a \leq i \leq m$ then $j^*(i) \leq j^*(m)$. Therefore, we can recursively solve for smaller rectangles that are in the upper-left and lower-right corners of $R$.
 
 \section{something and Closeness TODO}
 \label{sec:closeness}
